# parceltongue

./: main.py  pyproject.toml
mcpup_models/: __init__.py
mcpup_models/requests/: __init__.py  models.py
mcpup_models/requests/_internal_utils/: __init__.py  models.py
mcpup_models/requests/adapters/: __init__.py  models.py
mcpup_models/requests/api/: __init__.py  models.py
mcpup_models/requests/cookies/: __init__.py  models.py
mcpup_models/requests/help/: __init__.py  models.py
mcpup_models/requests/hooks/: __init__.py  models.py
mcpup_models/requests/sessions/: __init__.py  models.py
mcpup_models/requests/utils/: __init__.py  models.py
src/parceltongue/: __init__.py
