[project]
name = "parceltongue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
]

[project.scripts]
hello = "parceltongue:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
